// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeProvider uses DesktopDevice on web 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  enableFocusRing={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "stretch",
      "display": "flex",
      "flexBasis": 0,
      "flexDirection": "column",
      "flexGrow": 1,
      "flexShrink": 1,
      "outlineStyle": "none",
    }
  }
  testID="bearei__material--test-id"
>
  <Text>
    Web View
  </Text>
</View>
`;

exports[`ThemeProvider uses MobileDevice on iOS/Android 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  enableFocusRing={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "stretch",
      "display": "flex",
      "flexBasis": 0,
      "flexDirection": "column",
      "flexGrow": 1,
      "flexShrink": 1,
      "outlineStyle": "none",
    }
  }
  testID="bearei__material--test-id"
>
  <Text>
    Mobile View
  </Text>
</View>
`;
